--- a/index.html
+++ b/index.html
@@ -1,23 +1,179 @@
+
 <!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>charity: water — Your support, their water</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Add this inside the <head> section of your index.html -->
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Nunito', sans-serif;
+      font-weight: 400; /* normal weight for most text */
+    }
+
+    /* Bold ONLY the donate button */
+    .donate-btn {
+      font-weight: 800;
+    }
+  </style>
+
+  
+
+  <!-- If you have licensed Proxima Nova webfonts, drop WOFF2 files in /assets/fonts/ and uncomment: -->
+  <!--
+  <style>
+    @font-face { font-family:'Proxima Nova'; src:url('./assets/fonts/ProximaNova-Regular.woff2') format('woff2'); font-weight:400; font-style:normal; font-display:swap; }
+    @font-face { font-family:'Proxima Nova'; src:url('./assets/fonts/ProximaNova-Semibold.woff2') format('woff2'); font-weight:600; font-style:normal; font-display:swap; }
+    @font-face { font-family:'Proxima Nova'; src:url('./assets/fonts/ProximaNova-ExtraBold.woff2') format('woff2'); font-weight:800; font-style:normal; font-display:swap; }
+  </style>
+  -->
+
+  
+
+  
+
+  <style>
+    /* =====================
+       Brand tokens
+       ===================== */
+    :root {
+      --brand-yellow: #eeca44;  /* headings, donate text/border, accent line */
+      --brand-light:  #fdfaf1;  /* subheader, (optional) image borders */
+      --paper: #ffffff;         /* header background */
+      --ink: #111111;           /* header text color */
+      --bg: #0d0d0d;            /* page bg */
+      --container: 1200px;
+      --shadow: 0 10px 30px rgba(0,0,0,0.25);
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      background: var(--bg);
+      color: var(--brand-light);
+      font-family: 'Proxima Nova', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      font-weight: 400; /* only DONATE is bold */
+      line-height: 1.4;
+      padding-top: 72px; /* offset for fixed header */
+    }
+
+    /* ===== Fixed header (white box that does not move) ===== */
+    .site-header { position: fixed; top: 0; left: 0; right: 0; height: 72px; background: var(--paper); color: var(--ink); z-index: 1000; box-shadow: 0 2px 12px rgba(0,0,0,0.08); }
+    .header-inner { max-width: var(--container); height: 72px; display: flex; align-items: center; padding-left: 20px; justify-content: flex-start;}
+    /* Background-based logo so it "crops" itself and stays readable */
+    .brand-logo { width: 200px; height: 40px; display: inline-block; background: url('./assets/logo-charity-water.png') center center / contain no-repeat; background-size: contain; }
+
+    /* ===== Hero ===== */
+    .hero { position: relative; min-height: 90vh; display: grid; align-items: stretch; color: #fff;
+      background:
+        linear-gradient(to top, rgba(0,0,0,0.55), rgba(0,0,0,0.15)),
+        url('./assets/hero.jpg') center/cover no-repeat; 
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        padding-bottom: 250px; /* Extra space for cards overlap */
+        overflow: hidden;}
+
+    .hero-inner { max-width: var(--container); margin: 0 auto; width: 100%; padding: 40px 16px 160px; position: relative; }
+
+    /* Donate button — the ONLY bold element */
+    .donate-btn { position: absolute; top: 40px; right: 20px; background: transparent; color: var(--brand-yellow); border: 2px solid var(--brand-yellow); padding: 10px 18px; border-radius: 30px; font-weight: 800; cursor: pointer; box-shadow: 0 6px 16px rgba(0,0,0,0.25); }
+    .donate-btn:hover { background: var(--brand-yellow); color: #1f1a00; }
+
+    .hero h1 { color: var(--brand-yellow); font-weight: 400; text-align: left; font-size: clamp(36px, 7vw, 72px); line-height: 1.1; margin: -20px 0 8px 0; }
+    .hero .subcopy { color: var(--brand-light); font-weight: 400; margin-left: 10px; font-size: 1.25rem; letter-spacing: 0.02em; max-width: 540px; margin-top: 20px; text-shadow: 0 2px 8px rgba(0,0,0,0.4); }
+
+    /* Mid-screen accent line with small block */
+    .accent-divider { position: absolute; left: 0; right: 0; bottom: 42px; height: 3px; background: linear-gradient(to right, transparent 2%, var(--brand-yellow) 2% 98%, transparent 98%); opacity: .9; }
+    .accent-divider::before { content: ""; position: absolute; left: 50%; top: -3px; transform: translateX(-50%); width: 160px; height: 3px; background: var(--brand-yellow); }
+
+    /* ===== Overlapping photo cards (no rounded corners) ===== */
+    .hero-cards { position: absolute; left: 50%; bottom: -200px; transform: translateX(-50%); display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 18px; width: min(100%, var(--container)); padding: 0 16px; }
+    .card-img { background: #222; border: 3px solid var(--brand-light); border-radius: 0; overflow: hidden; box-shadow: var(--shadow); aspect-ratio: 4 / 3; }
+    .card-img img { width: 100%; height: 100%; object-fit: cover; display: block; border: none; border-radius: 0; }
+
+    /* ===== Content sections ===== */
+    .section { background: #0e0e0e; color: #eaeaea; padding: 120px 16px 80px; }
+    .section .inner { max-width: var(--container); margin: 0 auto; }
+    .section h2 { color: var(--brand-yellow); font-weight: 400; font-size: clamp(22px, 4vw, 36px); margin: 0 0 12px 0; }
+    .section p { color: #d7d7d7; max-width: 72ch; }
+
+    .cta-bar { background: #141414; border-top: 1px solid rgba(255,255,255,0.08); padding: 48px 16px 96px; }
+    .cta-card { max-width: var(--container); margin: 0 auto; background: #1a1a1a; border: 1px solid rgba(255,255,255,0.09); border-radius: 0; padding: 24px; box-shadow: var(--shadow); display: flex; gap: 16px; align-items: center; justify-content: space-between; flex-wrap: wrap; }
+    .cta-card h3 { margin: 0; font-weight: 400; color: var(--brand-light); font-size: clamp(18px, 3.2vw, 26px); }
+    .cta-actions { display: flex; gap: 10px; align-items: center; }
+    .btn-primary, .btn-ghost { border-radius: 30px; padding: 12px 18px; font-weight: 800; cursor: pointer; border: 2px solid var(--brand-yellow); }
+    .btn-primary { background: var(--brand-yellow); color: #1f1a00; }
+    .btn-ghost { background: transparent; color: var(--brand-yellow); }
+
+    footer { color: #a9a9a9; font-size: 14px; padding: 28px 16px 48px; text-align: center; }
+
+    @media (max-width: 900px) {
+      .hero-inner { padding-bottom: 200px; }
+      .accent-divider { bottom: 300px; }
+      .hero-cards { grid-template-columns: 1fr; bottom: -80px; }
+      .donate-btn { position: static; margin: 8px 0 0 auto; display: inline-block; }
+    }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <img src="assets/logo-charity-water.png" alt="charity: water" style="height:40px;">
+  <!-- ===== Fixed Header ===== -->
+  <header class="site-header" role="banner">
+    <div class="header-inner">
+      <a href="#" class="brand-logo" aria-label="charity: water"></a>
+    </div>
   </header>
-  <section class="hero">
-    <h1>Your Support, Their Water</h1>
-    <p>Join thousands of students proving that small, easy donations add up to lasting change.</p>
-    <div class="hero-cards">
-      <img src="assets/side-left.jpg" alt="Left image">
-      <img src="assets/center.jpg" alt="Center image">
-      <img src="assets/side-right.jpg" alt="Right image">
+
+  <!-- ===== HERO ===== -->
+  <section class="hero" aria-label="Hero: Your support, their water">
+    <div class="hero-inner">
+      <button class="donate-btn" aria-label="Donate now">DONATE NOW</button>
+
+      <h1>YOUR SUPPORT,<br/>THEIR WATER</h1>
+      <p class="subcopy">JOIN THOUSANDS OF STUDENTS PROVING THAT SMALL, EASY DONATIONS ADD UP TO LASTING CHANGE.</p>
+
+      <div class="accent-divider" aria-hidden="true"></div>
+
+      <!-- 3 Overlapping images (no rounded corners) -->
+      <div class="hero-cards">
+        <figure class="card-img">
+          <img src="./assets/side-left.jpg" alt="Field engineers at a well site" />
+        </figure>
+        <figure class="card-img">
+          <img src="./assets/center.jpg" alt="Community celebrating clean water" />
+        </figure>
+        <figure class="card-img">
+          <img src="./assets/side-right.jpg" alt="Water collection at a new source" />
+        </figure>
+      </div>
     </div>
   </section>
+
+  <!-- ===== STORY ===== -->
+  <section class="section" id="story">
+    <div class="inner">
+      <h2>Why students make a real dent</h2>
+      <p>Students are known for passion and big ideas—this is a direct way to turn that energy into real change.</p>
+    </div>
+  </section>
+
+  <!-- ===== CTA ===== -->
+  <div class="cta-bar">
+    <div class="cta-card" role="region" aria-label="Donate call to action">
+      <h3>Ready to help fund clean water?</h3>
+      <div class="cta-actions">
+        <a class="btn-primary" href="#" role="button">Donate now</a>
+        <a class="btn-ghost" href="#" role="button">See how funds are used</a>
+      </div>
+    </div>
+  </div>
+
+  <footer>© <span id="y"></span> charity: water — final build</footer>
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
