Update information in index.html

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </div>
   </div>
 
-  <footer>© <span id="y"></span> charity: water — final build</footer>
+  <footer>© <span id="y"></span>  Contact us: info@charitywater.com  |  Phone: (832) 784-1234</footer>
   <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 </body>
 </html>
